--- a/index.html
+++ b/index.html
@@ -40,20 +40,11 @@
     >
 
         <a-entity
-                id="magnemite"
+                id="colt_m1911"
                 rotation="-90 0 0"
                 position="0 -1 0"
-                scale=".1 .1 .1"
-                gltf-model="./assets/magnemite/scene.gltf"
-                gesture-handler>
-        </a-entity>
-
-        <a-entity
-                id="dragonite"
-                rotation="-90 0 0"
-                position="0 -1 0"
-                scale="0 0 0"
-                gltf-model="./assets/dragonite/scene.gltf"
+                scale="30 30 30"
+                gltf-model="./assets/colt_m1911/scene.gltf"
                 gesture-handler>
         </a-entity>
 
